fixed tab and prompt alignment

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -96,6 +96,12 @@ body {
   display: flex;
   align-items: center;
 }
+.awsui_tabs-header-list_14rmt_1ebqu_298:not(#\9),.awsui_tabs-header_14rmt_1ebqu_290:not(#\9) {
+  justify-content: center !important;
+}
+.awsui_header_14iqq_96qba_346.awsui_with-paddings_14iqq_96qba_392:not(#\9) {
+  display: flex !important;
+}
 .awsui_tools_hyvsj_lgv7x_981 > .awsui_animated-content_hyvsj_lgv7x_816:not(#\9) {
   margin-bottom: 130px;
 }
